fix(logo): prevent padding collapse for logo/tagline

--- a/src/css/scss/theme-k/_base.scss
+++ b/src/css/scss/theme-k/_base.scss
@@ -127,14 +127,6 @@ hr, .hr {
 }
 
 /* SIZES, PADDINGS, MARGINS */
-.p-logo {
-    padding: 6px $padding 3px $padding;
-}
-
-.p-tagline {
-    padding: 7px $padding 7px $padding;
-}
-
 .p-0 {
     padding: 0;
 }
